# SmartSystem

backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/apps/accounts/: apps.py  backends.py  filters.py  manager.py  models.py  serializers.py  signals.py  views.py
backend/apps/api/: urls.py
backend/apps/helpers/: mixins.py  models_abstracts.py
backend/apps/tags/: admin.py  models.py  serializers.py  views.py
backend/apps/tanks/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/core/: asgi.py  urls.py
backend/core/settings/: auth_settings.py  base.py  cors_settings.py  database_settings.py  email_settings.py  host_settings.py  installed_apps_settings.py  internationalizations_settings.py  media_settings.py  reset_framework_settings.py
backend/core/settings/dev/: base.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx  main.jsx  routes.jsx
frontend/src/components/: Auth.jsx  BasicModal.jsx  DataGridBasic.jsx  FuelSupplyForm.jsx  TableHistoryFuelSupply.jsx  TankDetails.jsx  TankForm.jsx  TankList.jsx  formikField.jsx
frontend/src/entity/: urls.js
frontend/src/hooks/: useGetUser.js  useLoadingTanks.js  useTankForm.js
frontend/src/services/: api-tanks.jsx  api-users.jsx
frontend/src/validations/: authValidation.js  fuelSupplyFormValidation.js  tankValidation.js
